--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Curso de GraphQL next y Apollo (Juan de la Torre)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon .",
+    "dev": "nodemon ."
   },
   "author": "Antonio Zurano Blazquez",
   "license": "ISC",
