--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "Antonio Zurano Blazquez",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^3.12.0"
+    "apollo-server": "^3.12.0",
+    "dotenv": "^16.3.1",
+    "mongoose": "^7.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
