--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.12.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "mongoose": "^7.3.1"
   },
